Update 'zmzkmek9t-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:4cac382b21f4e1b3dc973fa877d74dccccd4563c@sha256:4207f3e4825d4e7cd00d4db349c44a56a9e0b433a36acec791c6dc0e508bab52

--- a/components/zmzkmek9t-go/overlays/development/deployment-patch.yaml
+++ b/components/zmzkmek9t-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zmzkmek9t-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:4cac382b21f4e1b3dc973fa877d74dccccd4563c@sha256:4207f3e4825d4e7cd00d4db349c44a56a9e0b433a36acec791c6dc0e508bab52
+          name: container-image
